objects/sfLma__Package_Version__c.object
<CustomObject>
    <description>This object represents a specific version of a package uploaded by the developer to the AppExchange. Licenses relate to this object, since a user has a specific version installed in their Salesforce organization.</description>
    <fields>
        <fullName>sfLma__Help__c</fullName>
        <formula>(HYPERLINK(&quot;http://www.salesforce.com/docs/en/lma/index_CSH.htm#lma_package_version_details.htm&quot;, &quot;Help for Package Version&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Is_Beta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if the version is beta or has been released</description>
        <label>Beta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfLma__Package__c</fullName>
        <label>Package</label>
        <referenceTo>sfLma__Package__c</referenceTo>
        <relationshipName>R00N30000001JvR7EAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfLma__Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Sequence__c</fullName>
        <description>Package version sequence</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfLma__Version_ID__c</fullName>
        <label>Version ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Version_Number__c</fullName>
        <label>Version Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Package Version</label>
    <listViews>
        <fullName>sfLma__All</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Package__c</columns>
        <columns>sfLma__Release_Date__c</columns>
        <columns>sfLma__Version__c</columns>
        <columns>sfLma__Is_Beta__c</columns>
        <columns>sfLma__Version_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>